# bazel-sonarqube

./: MODULE.bazel  README.md  defs.bzl  extensions.bzl
.github/workflows/: ci.yaml
docs/: BUILD.bazel
examples/java-bzlmod/: BUILD  MODULE.bazel
examples/java-workspace/: WORKSPACE
