module(
    name = "bazel_sonarqube",
    version = "1.0.3",
    compatibility_level = 1,
    repo_name = "bazel_sonarqube",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_java", version = "8.16.1")

bazel_dep(
    name = "stardoc",
    version = "0.8.0",
    dev_dependency = True
)

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "bazel_version", "org_sonarsource_scanner_cli_sonar_scanner_cli")

remote_coverage_tools_extension = use_extension("@bazel_tools//tools/test:extensions.bzl", "remote_coverage_tools_extension")
use_repo(remote_coverage_tools_extension, "remote_coverage_tools")